add_executable(channel_test channel_test.cpp)
target_link_libraries(channel_test libel_net)

add_executable(buffer_test buffer_test.cpp)
target_link_libraries(buffer_test libel_net)

add_executable(eventloop_test eventloop_test.cpp)
target_link_libraries(eventloop_test libel_net)

add_executable(timerqueue_test timerqueue_test.cpp)
target_link_libraries(timerqueue_test libel_net)

add_executable(eventloop_thread_test eventloop_thread_test.cpp)
target_link_libraries(eventloop_thread_test libel_net)

add_executable(eventloop_threadpool_test eventloop_threadpool_test.cpp)
target_link_libraries(eventloop_threadpool_test libel_net)

add_executable(inetaddress_test inetaddress_test.cpp)
target_link_libraries(inetaddress_test libel_net)

add_executable(echoserver_test echoserver_test.cpp)
target_link_libraries(echoserver_test libel_net)

add_executable(echoclient_test echoclient_test.cpp)
target_link_libraries(echoclient_test libel_net)

add_executable(tcpclient_test1 tcpclient_test1.cpp)
target_link_libraries(tcpclient_test1 libel_net)

add_executable(tcpclient_test2 tcpclient_test2.cpp)
target_link_libraries(tcpclient_test2 libel_net)

add_executable(tcpclient_test3 tcpclient_test3.cpp)
target_link_libraries(tcpclient_test3 libel_net)

